--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -3,6 +3,15 @@
 /***            section at the top of the webpage                ***/
 /*******************************************************************/
 
+
+
+/*  Global CSS  */
+html
+{
+
+}
+
+
 /*  Navigation Bar CSS  */
 
 .navbar
@@ -38,7 +47,8 @@ ul.nav a:hover
     color: #579aff !important; 
 }
 
-.scrollable-menu {
+.scrollable-menu 
+{
     height: auto;
     max-height: 200px;
     overflow-x: hidden;
@@ -57,10 +67,9 @@ ul.nav a:hover
 div.sb-page-header
 {
     padding-top: 200px;
-
-    background-color: #171721;
-    opacity: 0.85;
-    filter: alpha(opacity=85);
+    background-image: linear-gradient(to bottom,
+    rgba(28, 32, 42, 0.95),
+    rgba(28, 32, 42, 0.65));
     text-align: center;   
 }
 
@@ -109,7 +118,6 @@ div.header-text4 h2, div.header-text4 p
 
 div.header-text2 a, div.header-text3 a, div.header-text4 a
 {
-    /*padding-left: 10px;*/
     color: white;
     text-decoration: none;
     
@@ -117,11 +125,28 @@ div.header-text2 a, div.header-text3 a, div.header-text4 a
     margin-right: 0%;
 }
 
+div.header-text2 p > a.button, div.header-text3 p > a.button, div.header-text4 p > a.button
+{
+    background: rgba(255,255,255, 0.2);
+    padding: 1.5% 2% 1.5% 2%;
+    border-radius: 40px; 
+    transition: all ease-in-out 0.3s;
+    -webkit-transition: all ease-in-out 0.3s;
+}
+
+div.header-text2 p > a.button:hover, div.header-text3 p > a.button:hover, div.header-text4 p > a.button:hover
+{
+    background-color: #e73d44;
+    transition: all ease-in-out 0.3s;
+    -webkit-transition: all ease-in-out 0.3s;
+}
+
 .row .container2
 {
     margin-top:50px;
     background-color: #252525;
 }
+
 
 
 
