--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4233,6 +4233,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .container-fluid > .navbar-collapse {
   margin-right: -15px;
   margin-left: -15px;
+  padding-bottom: px;
 }
 @media (min-width: 768px) {
   .container > .navbar-header,
@@ -4295,10 +4296,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-toggle {
+  /* padding-top: 100px; */
   position: relative;
   float: right;
   padding: 9px 10px;
-  margin-top: 8px;
+  padding-top: 10px;
+  margin-top: 17px;
   margin-right: 15px;
   margin-bottom: 8px;
   background-color: transparent;
@@ -4535,6 +4538,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
+  padding-top: 10px;
   background-color: #ddd;
 }
 .navbar-default .navbar-toggle .icon-bar {
@@ -4542,7 +4546,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: #e7e7e7;
+  /* border-color: #e7e7e7; */
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
