--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -3,7 +3,11 @@
 /***            section at the top of the webpage                ***/
 /*******************************************************************/
 
+
+/*------------------------------------------------------------------------------------------------*/
+
 /*  Navigation Bar CSS  */
+
 /*------------------------------------------------------------------------------------------------*/
 .navbar
 {
@@ -50,6 +54,7 @@ ul.nav a:hover
     max-height: 200px;
     overflow-x: hidden;
 }
+
 /*-----------------------------------------------------------------------------------------------*/
 
 /*  Header CSS  */
@@ -115,13 +120,51 @@ div.header-text2 a, div.header-text3 a, div.header-text4 a
     margin-right: 0%;
 }
 
+@media all and (max-width: 1417px)
+{
+    .header-text2 h2, .header-text3 h2, .header-text4 h2
+    {
+        font-size: 27px;
+    }
+}
+
+@media all and (max-width: 1285px)
+{
+    .header-text2 h2, .header-text3 h2, .header-text4 h2
+    {
+        font-size: 25px;
+    }
+}
+
+@media all and (max-width: 1180px)
+{
+    .header-text2 h2, .header-text3 h2, .header-text4 h2
+    {
+        font-size: 23px;
+    }
+}
+
+@media all and (max-width: 1100px)
+{
+    .header-text2 h2, .header-text3 h2, .header-text4 h2
+    {
+        font-size: 20px;
+    }
+}
+
+@media all and (max-width: 990px)
+{
+    .header-text2 h2, .header-text3 h2, .header-text4 h2
+    {
+        font-size: 27px;
+    }
+}
+
 div.header-text2 p > a.button, div.header-text3 p > a.button, div.header-text4 p > a.button
 {
     background: rgba(255,255,255, 0.2);
     padding: 1.5% 2% 1.5% 2%;
-    border-radius: 40px; 
-    transition: all ease-in-out 0.3s;
-    -webkit-transition: all ease-in-out 0.3s;
+    border-radius: 40px;
 }
 
 div.header-text2 p > a.button:hover, div.header-text3 p > a.button:hover, 
@@ -137,11 +180,25 @@ div.header-text4 p > a.button:hover
     margin-top:50px;
     background-color: #252525;
 }
+
 /*-----------------------------------------------------------------------------------------------*/
 
-.container3
+/*  Quote CSS   */
+
+/*-----------------------------------------------------------------------------------------------*/
+article div.row .container3
 {
-    padding-bottom: 200px
+    background-color: white;
+    padding-bottom: 1000px;
+}
+
+.quote-text
+{
+    text-align: center;
+    font-size: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: #3e4c5e;
 }
 
 div.mid-text
@@ -150,14 +207,167 @@ div.mid-text
     
 }
 
+/*----------------------------------------------------------------------------------------------*/
+
+/*  Middle-Text css */
+
+/*----------------------------------------------------------------------------------------------*/
 .container4
 {
-    background-color: #eef5f9;
-     padding-bottom: 200px;
+    background-color:  #7b8ca2; 
 }
 
-
-body
+div.middle-text1
 {
-    padding-bottom: 10000px;
+    color: #3e4c5e;
+    text-decoration: none;
+    text-align: left; 
+
+    background-color: #eef5f9; 
+
+    padding-top: 45px;
+    padding-bottom: 60px;
+    padding-left: 40px;
+    padding-right: 45px;
+    margin-left: 0%;
+    margin-right: 0%;
+    width: 60%;
+    float: left;  
+}
+
+div.middle-text2
+{
+    color: white;
+    text-decoration: none;
+    text-align: center;   
+
+    background-color: #7b8ca2;
+
+    padding-top: 25px;
+    padding-left: 20px;
+    padding-right: 40px;
+    margin-left: 0%;
+    margin-right: 0%;
+    width: 40%;
+    float: right;    
+}
+
+div.middle-text2 p > a.button
+{
+    color: white;
+    text-decoration: none;
+
+    background: rgba(255,255,255, 0.2);
+
+    padding: 1.5% 2% 1.5% 2%;
+    border-radius: 40px;
+}
+
+div.middle-text2 p > a.button:hover
+{
+    background-color: #e73d44;
+
+    transition: all ease-in-out 0.3s;
+    -webkit-transition: all ease-in-out 0.3s;
+
+}
+
+@media all and (max-width: 990px)
+{
+    div.middle-text1, div.middle-text2
+    {
+        width: 100%;
+        text-align: center;
+    }
+
+    div.middle-text2
+    {
+        background-color: #3e4c5e;
+    }
+
+    div.middle-text2 p > a.button
+    {
+        color: white;
+        text-decoration: none;
+    
+        background: rgba(255,255,255, 0.2);
+
+        padding: 1.5% 2% 1.5% 2%;
+        border-radius: 40px;
+        float: none; 
+    }
+}
+
+/*----------------------------------------------------------------------------------------------*/
+
+/*  Sidebar and Upcoming events css */
+
+/*----------------------------------------------------------------------------------------------*/
+
+.container5
+{ 
+    color: white;
+    background-color: #eef5f9;
+}
+
+div.upcoming_events
+{
+
+    float: left;
+    width: 60%;
+
+    background-color: #3e4c5e;
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+
+    text-align: left;
+}
+
+div.upcoming_events h2
+{   
+    text-decoration: none;
+}
+
+div.sidebar
+{
+    width: 40%;
+    float: left;
+
+    text-align: center;
+
+    background-color: #7b8ca2;
+    color: white;
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+@media all and (max-width: 990px)
+{
+    div.sidebar, div.upcoming_events
+    {
+        width: 100%;
+        text-align: center;
+    }
+}
+
+/*----------------------------------------------------------------------------------------------*/
+
+/*  Middle-Text css */
+
+/*----------------------------------------------------------------------------------------------*/
+footer div.row div.col-lg-12
+{
+    color: white;
+    text-decoration: none;
+
+    background-image: url(../images/tile.png);
+    background-color: #003484; 
+
+    padding-top: 20px;
+    padding-bottom: 10px;
+    padding-left: 40px;
+    margin-top: 1px;
 }
