added an in progress page.
Abhi

--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -355,7 +355,7 @@ div.sidebar
 
 /*----------------------------------------------------------------------------------------------*/
 
-/*  Middle-Text css */
+/*  Footer css */
 
 /*----------------------------------------------------------------------------------------------*/
 footer div.row div.col-lg-12
