nothing new again

--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -350,7 +350,10 @@ div.sidebar
     {
         width: 100%;
         text-align: center;
-        float: none;
+    }
+    div.upcoming_events
+    {
+        padding-left: 0px;
     }
 }
 
