fixing some stuff.

--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -305,7 +305,7 @@ div.middle-text2 p > a.button:hover
 .container5
 { 
     color: white;
-    background-color: #eef5f9;
+    background-color: #3e4c5e;
 }
 
 div.upcoming_events
