--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -276,7 +276,7 @@ div.middle-text2 p > a.button:hover
 {
     .container4
     {
-        background-color:  #eef5f9; 
+        background-color:  #3e4c5e; 
     }
     div.middle-text1, div.middle-text2
     {
@@ -346,7 +346,7 @@ div.sidebar
 {
     .container5
     {
-        background-color: #eef5f9;
+        background-color: #3e4c5e;
     }
     div.sidebar, div.upcoming_events
     {
