--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -14,6 +14,10 @@
     background-image: url(../images/tile.png);
     background-color: #003484;
     padding-bottom: 10px;
+    border-top-width: 0px;
+    border-right-width: 0px;
+    border-bottom-width: 0px;
+    border-left-width: 0px;
 }
 
 .navbar-default .navbar-brand
@@ -334,14 +338,34 @@ div.sidebar
     width: 40%;
     float: left;
 
-    text-align: center;
+    text-align: left;
 
     background-color: #7b8ca2;
     color: white;
 
     padding-top: 20px;
+    padding-left: 40px;
     padding-bottom: 20px;
 }
+
+div.sidebar p > a.button 
+{
+    color: white;
+    text-decoration: none;
+    background: rgba(255,255,255, 0.2);
+    padding: 1.5% 2% 1.5% 2%;
+    border-radius: 40px;
+}
+
+div.sidebar p > a.button:hover
+{
+    background-color: #e73d44;
+
+    transition: all ease-in-out 0.3s;
+    -webkit-transition: all ease-in-out 0.3s;
+
+}
+
 
 @media all and (max-width: 990px)
 {
@@ -369,14 +393,12 @@ div.sidebar
 /*----------------------------------------------------------------------------------------------*/
 footer div.row div.col-lg-12
 {
-    color: white;
+    color: #3e4c5e;
     text-decoration: none;
 
-    background-image: url(../images/tile.png);
-    background-color: #003484; 
+    background-color: #eef5f9; 
 
     padding-top: 20px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     padding-left: 40px;
-    margin-top: 1px;
 }
