--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -379,6 +379,7 @@ div.sidebar p > a.button:hover
         width: 100%;
         text-align: center;
         padding-bottom: 27px;
+        padding-left: 0px;
     }
     div.upcoming_events
     {
