--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -346,6 +346,7 @@ div.sidebar
     padding-top: 20px;
     padding-left: 40px;
     padding-bottom: 20px;
+    padding-right: 20px;
 }
 
 div.sidebar p > a.button 
@@ -380,6 +381,7 @@ div.sidebar p > a.button:hover
         text-align: center;
         padding-bottom: 27px;
         padding-left: 0px;
+        padding-right: 0px;
     }
     div.upcoming_events
     {
