--- a/css/tutoringpage.css
+++ b/css/tutoringpage.css
@@ -60,40 +60,79 @@ ul.nav a:hover
 /*-----------------------------------------------------------------------------------------------*/
 .container1
 {
-    background-color: #eef5f9;
+    background-color:#3e4c5e;
 }
 .Digital_System_Section
 {
     color: black;
     text-decoration: none;
-
+    background-color: #3e4c5e;
     margin-top: 0px;
 }
 
-div.Digital_System_Section h1
+div.Digital_System_Section h3
 {
     background-color: #3e4c5e;
     margin-left: 0px;
-    color:white ; 
+    color:white; 
 
-    padding-top: 90px;
-    padding-left: 40px;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-left: 40px; 
+    padding-bottom: 10px;
     margin-bottom: 0px;
     margin-top: 0px;
+
+    display: block;
+    float: left;
 }
 
-div.Digital_Circuits_Section h1, div.ENA_Section h1, div.Signals_Section h1
+div.button_section
+{
+    background-color: #3e4c5e;
+    width: 30%;
+    float: right;
+    padding-top: 90px;
+    padding-right: 40px;
+    padding-bottom: 20px;
+    margin-bottom: 0px;
+    float: right;
+}
+
+div.title_section
+{
+    background-color: #3e4c5e;
+    color:white ; 
+
+    padding-top: 85px;
+    padding-left: 40px;
+    padding-bottom: 20px;
+    width: 70%;
+    display: block;
+    float:left; 
+}
+
+@media all and (max-width: 990px)
+{
+    div.title_section
+    {
+         padding-left: 0px;
+    }
+}
+
+div.Digital_Circuits_Section h3, div.ENA_Section h3, div.Signals_Section h3
 {
     background-color: #3e4c5e;
     margin-left: 0px;
     color:white ; 
 
     padding-top: 20px;
+    padding-right: 20px;
     padding-left: 40px;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
     margin-bottom: 0px;
     margin-top: 0px;
+
+
 }
 
 table
@@ -104,25 +143,25 @@ table
 .tablecolor1
 {
     color: white;
-    background-color: #3e4c5e;
-    padding-left:40px;
+    background-color: #7b8ca2;
     text-align: right;
     padding-right: 25px;
+
 }
 
 .tablecolor2
 {
-    color:white;
+    color: black;
     text-align: left;
-    background-color: #7b8ca2;
+    background-color: #eef5f9;
     padding-left: 25px;
 }
 
 
 .tablecolor3
 {
-    color:white;
-    background-color: #7b8ca2;
+    color: black;
+    background-color: #eef5f9;
     text-decoration: none;
 }
 
@@ -142,4 +181,23 @@ footer div.row div.col-lg-12
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 40px;
+}
+
+p > a.button 
+{
+    color: white;
+    text-decoration: none;
+    background: rgba(255,255,255, 0.2);
+    padding: 10.5px 20px 10.5px 20px;
+    border-radius: 40px;
+    float: right;
+}
+
+p > a.button:hover
+{
+    background-color: #e73d44;
+
+    transition: all ease-in-out 0.3s;
+    -webkit-transition: all ease-in-out 0.3s;
+
 }
