--- a/css/tutoringpage.css
+++ b/css/tutoringpage.css
@@ -249,3 +249,8 @@ p > a.button:hover
     transition: all ease-in-out 0.3s;
     -webkit-transition: all ease-in-out 0.3s;
 }
+
+.row
+{
+    background-color: #3e4c5e;
+}
