--- a/css/tutoringpage.css
+++ b/css/tutoringpage.css
@@ -19,7 +19,7 @@
     color: white;
 }
 
-.navbar-default .navbar-collapse, .navbar-default .navbar-form 
+.navbar-default .navbar-collapse, .navbar-default .navbar-form
 {
     border-color: #0c1f3c;
     margin-top: 0%;
@@ -32,21 +32,21 @@
 
 div.navbar-header a.brandname:hover
 {
-    color: #579aff !important; 
+    color: #579aff !important;
 }
-    
+
 .navbar-default .navbar-nav > li > a
 {
     color: white;
     padding-top: 25px;
 }
 
-ul.nav a:hover 
-{ 
-    color: #579aff !important; 
+ul.nav a:hover
+{
+    color: #579aff !important;
 }
 
-.scrollable-menu 
+.scrollable-menu
 {
     height: auto;
     max-height: 200px;
@@ -74,11 +74,11 @@ div.Digital_System_Section h3
 {
     background-color: #3e4c5e;
     margin-left: 0px;
-    color:white; 
+    color:white;
 
     padding-top: 10px;
-    padding-left: 40px; 
-    padding-bottom: 10px;
+    padding-left: 40px;
+    padding-bottom: 0px;
     margin-bottom: 0px;
     margin-top: 0px;
 
@@ -113,29 +113,29 @@ div.button_section2
 div.title_section
 {
     background-color: #3e4c5e;
-    color:white ; 
+    color:white ;
 
     padding-top: 85px;
     padding-left: 40px;
     padding-bottom: 20px;
-    width: 70%;
+    width: 100%;
     display: block;
-    float:left; 
+    float:left;
 }
 
 div.title_section2
 {
     background-color: #3e4c5e;
-    color:white ; 
+    color:white ;
     padding-top: 3px;
     padding-left: 40px;
     width: 70%;
     display: block;
-    float:left; 
+    float:left;
 }
 @media all and (max-width: 990px)
 {
-   
+
     div.title_section
     {
          padding-left: 0px;
@@ -174,7 +174,7 @@ table
 
 }
 
-.tablecolor2 
+.tablecolor2
 {
     color: black;
     text-align: left;
@@ -207,7 +207,7 @@ footer div.row div.col-lg-12
     color: white;
     text-decoration: none;
 
-    background-color: #3e4c5e; 
+    background-color: #3e4c5e;
 
     padding-top: 20px;
     padding-bottom: 20px;
@@ -215,7 +215,7 @@ footer div.row div.col-lg-12
     padding-top: 5
 }
 
-th > a.button 
+th > a.button
 {
     color: black;
     text-decoration: none;
@@ -232,7 +232,7 @@ th > a.button:hover
 }
 
 
-p > a.button 
+p > a.button
 {
     color: white;
     text-decoration: none;
@@ -253,4 +253,62 @@ p > a.button:hover
 .row
 {
     background-color: #3e4c5e;
+}
+
+#title{
+  margin-top: 30px;
+  margin-bottom: 20px;
+  margin-left: 10vw;
+  color: #fff;
+}
+
+/* CSS for responsive iframe */
+/* ========================= */
+
+/* outer wrapper: set max-width & max-height; max-height greater than padding-bottom % will be ineffective and height will = padding-bottom % of max-width */
+#Iframe-Master-CC-and-Rs {
+  max-width: 768px;
+  max-height: 100%;
+  overflow: hidden;
+}
+
+/* inner wrapper: make responsive */
+.responsive-wrapper {
+  position: relative;
+  height: 0;    /* gets height from padding-bottom */
+
+  /* put following styles (necessary for overflow and scrolling handling on mobile devices) inline in .responsive-wrapper around iframe because not stable in CSS:
+    -webkit-overflow-scrolling: touch; overflow: auto; */
+
+}
+
+.responsive-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+/* padding-bottom = h/w as % -- sets aspect ratio */
+/* YouTube video aspect ratio */
+.responsive-wrapper-wxh-572x612 {
+  padding-bottom: 107%;
+}
+
+/* general styles */
+/* ============== */
+.set-padding {
+  padding: 0px;
+}
+.set-margin {
+  margin: 10px;
+}
+.center-block-horiz {
+  margin-left: auto !important;
+  margin-right: auto !important;
 }
