--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -345,7 +345,7 @@ div.sidebar
 
     padding-top: 20px;
     padding-left: 40px;
-    padding-bottom: 125px;
+    padding-bottom: 20em;
     padding-right: 20px;
 }
 
@@ -354,8 +354,8 @@ div.sidebar p > a.button
     color: white;
     text-decoration: none;
     background: rgba(255,255,255, 0.2);
-    padding: 1.5% 2% 1.5% 2%;
-    border-radius: 40px;
+    padding: 1% 2% 1% 2%;
+    border-radius: 30px;
 }
 
 div.sidebar p > a.button:hover
