--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -3,7 +3,6 @@
 /***            section at the top of the webpage                ***/
 /*******************************************************************/
 
-
 /*------------------------------------------------------------------------------------------------*/
 
 /*  Navigation Bar CSS  */
@@ -90,7 +89,7 @@ div.header-text
 
 }
 
-div.col-md-6
+div.col-md-4
 {
     margin-left: 0%;
     margin-right: 0%;
@@ -122,6 +121,14 @@ div.header-text2 a, div.header-text3 a, div.header-text4 a
 
     margin-left: 0%;
     margin-right: 0%;
+}
+
+div.announcements{
+  width: 100%;
+  padding: 3.5rem;
+  color: white;
+  background-color: #3e4c5e;
+
 }
 
 @media all and (max-width: 1417px)
@@ -316,14 +323,14 @@ div.middle-text2 p > a.button:hover
 div.upcoming_events
 {
 
-    float: right;
-    //width: 55%;
+    float: left;
+    width: 55%;
 
     background-color: #3e4c5e;
 
     padding-top: 20px;
     padding-bottom: 20px;
-    padding-right: 15%;
+    padding-left: 40px;
 
     text-align: left;
 }
@@ -335,7 +342,7 @@ div.upcoming_events h2
 
 div.sidebar
 {
-    width: 50%;
+    width: 45%;
     float: left;
 
     text-align: left;
@@ -345,7 +352,7 @@ div.sidebar
 
     padding-top: 20px;
     padding-left: 40px;
-    padding-bottom: 15em;
+    padding-bottom: 20px;
     padding-right: 20px;
 }
 
@@ -354,8 +361,8 @@ div.sidebar p > a.button
     color: white;
     text-decoration: none;
     background: rgba(255,255,255, 0.2);
-    padding: 1% 2% 1% 2%;
-    border-radius: 30px;
+    padding: 1.5% 2% 1.5% 2%;
+    border-radius: 40px;
 }
 
 div.sidebar p > a.button:hover
@@ -389,56 +396,7 @@ div.sidebar p > a.button:hover
     }
 }
 
-/* CSS for responsive iframe */
-/* ========================= */
 
-/* outer wrapper: set max-width & max-height; max-height greater than padding-bottom % will be ineffective and height will = padding-bottom % of max-width */
-#Iframe-Master-CC-and-Rs {
-  max-width: 768px;
-  max-height: 100%;
-  overflow: hidden;
-}
-
-/* inner wrapper: make responsive */
-.responsive-wrapper {
-  position: relative;
-  height: 0;    /* gets height from padding-bottom */
-
-  /* put following styles (necessary for overflow and scrolling handling on mobile devices) inline in .responsive-wrapper around iframe because not stable in CSS:
-    -webkit-overflow-scrolling: touch; overflow: auto; */
-
-}
-
-.responsive-wrapper iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
-  margin: 0;
-  padding: 0;
-  border: none;
-}
-
-/* padding-bottom = h/w as % -- sets aspect ratio */
-/* YouTube video aspect ratio */
-.responsive-wrapper-wxh-572x612 {
-  padding-bottom: 107%;
-}
-
-/* general styles */
-/* ============== */
-.set-padding {
-  padding: 0px;
-}
-.set-margin {
-  margin: 10px;
-}
-.center-block-horiz {
-  margin-left: auto !important;
-  margin-right: auto !important;
-}
 
 
 /*----------------------------------------------------------------------------------------------*/
